--- a/project/index.html
+++ b/project/index.html
@@ -3,47 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Workit landing page</title>
 </head>
 <body>
-
-  Apply for access
-
-  Data tailored to your needs.
-
-  Learn more
-  
-  1
-
-  Actionable insights
-  
-  Optimize your products, improve customer satisfaction and stay ahead of the competition 
-  with our product data analytics.
-
-  2
-
-  Data-driven decisions
-
-  Make data-driven decisions with our product data analytics. Our AI-generated reports help 
-  you unlock insights hidden in your product data.
-
-  3
-
-  Always affordable
-
-  Always affordable pricing that scales with your business. Get top-quality product data 
-  analytics services without hidden costs or unexpected fees.
-
-  Be the first to test
-
-  Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a 
-  beta tester for our app and kickstart your company. Apply for access below and I’ll be 
-  in touch to schedule a call.
-
-  Apply for access
-
+  <div class="purple-bg">
+    <nav>
+      <ul class="flex">
+        <li><img src="./assets/images/logo-light.svg" alt="workit logo"></li>
+        <li class="access-txt">Apply for access</li>
+      </ul>
+    </nav>
+    <section class="head-section">
+      <h1>Data <span>tailored</span> to your needs.</h1>
+      <button><a href="#">Learn more</a></button>
+    </section>
+  </div>
+  <div class="round"></div>
+  <img class="phone-img" src="./assets/images/image-hero.webp" alt="phone">
+  <section class="card-section">
+    <div class="card">
+      <p class="num">1</p>
+      <h3>Actionable insights</h3>
+      <p class="desc">Optimize your products, improve customer satisfaction and stay ahead of the competition 
+        with our product data analytics.</p>
+    </div>
+    <div class="card">
+      <p class="num">2</p>
+      <h3>Data-driven decisions</h3>
+      <p class="desc">Make data-driven decisions with our product data analytics. Our AI-generated reports help 
+        you unlock insights hidden in your product data.</p>
+    </div>
+    <div class="card">
+      <p class="num">3</p>
+      <h3>Always affordable</h3>
+      <p class="desc">Always affordable pricing that scales with your business. Get top-quality product data 
+        analytics services without hidden costs or unexpected fees.</p>
+    </div>
+  </section>
+  <section class="founder-section">
+    <img src="./assets/images/image-founder.webp" alt="founder">
+    <div>
+      <h3>Be the first to test</h3>
+      <p>Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a 
+        beta tester for our app and kickstart your company. Apply for access below and I’ll be 
+        in touch to schedule a call.
+      </p>
+      <button><a href="#">Apply for access</a></button>
+    </div>
+  </section>
+  <footer>
+    <img src="./assets/images/logo-dark.svg" alt="work it logo">
+    <div class="icons">
+      <img src="./assets/images/icon-facebook.svg" alt="facebook-icon">
+      <img src="./assets/images/icon-twitter.svg" alt="twitter-icon">
+      <img src="./assets/images/icon-instagram.svg" alt="instagram-icon">
+    </div>
+  </footer>
 </body>
 </html>
