--- a/project/index.html
+++ b/project/index.html
@@ -20,23 +20,28 @@
       <button><a href="#">Learn more</a></button>
     </section>
   </div>
-  <div class="round"></div>
   <img class="phone-img" src="./assets/images/image-hero.webp" alt="phone">
   <section class="card-section">
     <div class="card">
-      <p class="num">1</p>
+      <div class="num-circle">
+        <p class="num">1</p>
+      </div>
       <h3>Actionable insights</h3>
       <p class="desc">Optimize your products, improve customer satisfaction and stay ahead of the competition 
         with our product data analytics.</p>
     </div>
     <div class="card">
-      <p class="num">2</p>
+      <div class="num-circle">
+        <p class="num">2</p>
+      </div>
       <h3>Data-driven decisions</h3>
       <p class="desc">Make data-driven decisions with our product data analytics. Our AI-generated reports help 
         you unlock insights hidden in your product data.</p>
     </div>
     <div class="card">
-      <p class="num">3</p>
+      <div class="num-circle">
+        <p class="num">3</p>
+      </div>
       <h3>Always affordable</h3>
       <p class="desc">Always affordable pricing that scales with your business. Get top-quality product data 
         analytics services without hidden costs or unexpected fees.</p>
