started tablet layout

--- a/project/index.html
+++ b/project/index.html
@@ -16,7 +16,7 @@
       </ul>
     </nav>
     <section class="head-section">
-      <h1>Data <span>tailored</span> to your needs.</h1>
+      <h1>Data <span>tailored</span> to <br> your needs.</h1>
       <button><a href="#">Learn more</a></button>
     </section>
   </div>
