--- a/project/index.html
+++ b/project/index.html
@@ -26,25 +26,31 @@
       <div class="num-circle">
         <p class="num">1</p>
       </div>
-      <h3>Actionable insights</h3>
-      <p class="desc">Optimize your products, improve customer satisfaction and stay ahead of the competition 
-        with our product data analytics.</p>
+      <div>
+        <h3>Actionable insights</h3>
+        <p class="desc">Optimize your products, improve customer satisfaction and stay ahead of the competition 
+          with our product data analytics.</p>
+      </div>
     </div>
     <div class="card">
       <div class="num-circle">
         <p class="num">2</p>
       </div>
-      <h3>Data-driven decisions</h3>
-      <p class="desc">Make data-driven decisions with our product data analytics. Our AI-generated reports help 
-        you unlock insights hidden in your product data.</p>
+      <div>
+        <h3>Data-driven decisions</h3>
+        <p class="desc">Make data-driven decisions with our product data analytics. Our AI-generated reports help 
+          you unlock insights hidden in your product data.</p>
+      </div>
     </div>
     <div class="card">
       <div class="num-circle">
         <p class="num">3</p>
       </div>
-      <h3>Always affordable</h3>
-      <p class="desc">Always affordable pricing that scales with your business. Get top-quality product data 
-        analytics services without hidden costs or unexpected fees.</p>
+      <div>
+        <h3>Always affordable</h3>
+        <p class="desc">Always affordable pricing that scales with your business. Get top-quality product data 
+          analytics services without hidden costs or unexpected fees.</p>
+      </div>
     </div>
   </section>
   <section class="founder-section">
