--- a/project/index.html
+++ b/project/index.html
@@ -17,7 +17,7 @@
     </nav>
     <section class="head-section">
       <h1>Data <span>tailored</span> to <br> your needs.</h1>
-      <button><a href="#">Learn more</a></button>
+      <button>Learn more</button>
     </section>
   </div>
   <img class="phone-img" src="./assets/images/image-hero.webp" alt="phone">
@@ -26,7 +26,7 @@
       <div class="num-circle">
         <p class="num">1</p>
       </div>
-      <div>
+      <div class="card-info">
         <h3>Actionable insights</h3>
         <p class="desc">Optimize your products, improve customer satisfaction and stay ahead of the competition 
           with our product data analytics.</p>
@@ -36,7 +36,7 @@
       <div class="num-circle">
         <p class="num">2</p>
       </div>
-      <div>
+      <div class="card-info">
         <h3>Data-driven decisions</h3>
         <p class="desc">Make data-driven decisions with our product data analytics. Our AI-generated reports help 
           you unlock insights hidden in your product data.</p>
@@ -46,7 +46,7 @@
       <div class="num-circle">
         <p class="num">3</p>
       </div>
-      <div>
+      <div class="card-info">
         <h3>Always affordable</h3>
         <p class="desc">Always affordable pricing that scales with your business. Get top-quality product data 
           analytics services without hidden costs or unexpected fees.</p>
@@ -61,7 +61,7 @@
         beta tester for our app and kickstart your company. Apply for access below and I’ll be 
         in touch to schedule a call.
       </p>
-      <button><a href="#">Apply for access</a></button>
+      <button>Apply for access</button>
     </div>
   </section>
   <footer>
